--- a/scrumapp-jsf/src/main/resources/application.properties
+++ b/scrumapp-jsf/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8080
-server.servlet.context-path=/scrum
+#server.servlet.context-path=/scrum
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://tfg.cpublaxgb1xa.eu-west-1.rds.amazonaws.com/tfg
+spring.datasource.url=jdbc:mysql://tfg.cpublaxgb1xa.eu-west-1.rds.amazonaws.com/scrum
 spring.datasource.username=admin
-spring.datasource.password=*****
+spring.datasource.password=159951c_
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 
-#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=validate
