--- a/scrumapp-jsf/pom.xml
+++ b/scrumapp-jsf/pom.xml
@@ -23,6 +23,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <artifactId>scrumapp-dao</artifactId>
+            <groupId>org.cfuentes</groupId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.cfuentes</groupId>
             <artifactId>scrumapp-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -31,6 +36,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
