--- a/scrumapp-jsf/src/main/resources/application.properties
+++ b/scrumapp-jsf/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.datasource.password=159951c_
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
-
-spring.jpa.hibernate.ddl-auto=validate
+joinfaces.primefaces.theme=omega
+#joinfaces.primefaces.font-awesome=true
+#spring.jpa.hibernate.ddl-auto=validate
+#joinfaces.jsf.default-suffix=.xhtml
