--- a/scrumapp-jsf/src/main/resources/application.properties
+++ b/scrumapp-jsf/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 joinfaces.primefaces.theme=omega
-#joinfaces.primefaces.font-awesome=true
+joinfaces.primefaces.font-awesome=true
 #spring.jpa.hibernate.ddl-auto=validate
 #joinfaces.jsf.default-suffix=.xhtml
