--- a/scrumapp-jsf/src/main/resources/application.properties
+++ b/scrumapp-jsf/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=8080
 #server.servlet.context-path=/scrum
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://tfg.cpublaxgb1xa.eu-west-1.rds.amazonaws.com/scrum
-spring.datasource.username=admin
+#spring.datasource.url=jdbc:mysql://tfg.cpublaxgb1xa.eu-west-1.rds.amazonaws.com/scrum
+spring.datasource.url=jdbc:mysql://cfuentes.mysql.database.azure.com/scrum
+spring.datasource.username=cfuentes
 spring.datasource.password=159951c_
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
