--- a/scrumapp-jsf/src/main/resources/application.properties
+++ b/scrumapp-jsf/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8080
 #server.servlet.context-path=/scrum
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://tfg.cpublaxgb1xa.eu-west-1.rds.amazonaws.com/scrum
-spring.datasource.url=jdbc:mysql://cfuentes.mysql.database.azure.com/scrum
-spring.datasource.username=cfuentes
-spring.datasource.password=159951c_
+#spring.datasource.url=jdbc:mysql://cfuentes.mysql.database.azure.com/scrum
+#spring.datasource.username=cfuentes
+#spring.datasource.password=159951c_
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
@@ -12,3 +12,15 @@ joinfaces.primefaces.theme=omega
 joinfaces.primefaces.font-awesome=true
 #spring.jpa.hibernate.ddl-auto=validate
 #joinfaces.jsf.default-suffix=.xhtml
+
+
+spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:~/db;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url = jdbc:h2:file:D:/sample
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.settings.trace=true
+#spring.datasource.initialization-mode=always
