--- a/scrumapp-jsf/src/main/resources/application.properties
+++ b/scrumapp-jsf/src/main/resources/application.properties
@@ -15,7 +15,7 @@ joinfaces.primefaces.font-awesome=true
 
 #Bloque BD mysql azure
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://cfuentes.mysql.database.azure.com/scrum
+spring.datasource.url=jdbc:mysql://cfuentes.mysql.database.azure.com/scrumdb
 spring.datasource.username=cfuentes
 spring.datasource.password=159951c_
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
