--- a/scrumapp-jsf/src/main/resources/application.properties
+++ b/scrumapp-jsf/src/main/resources/application.properties
@@ -14,12 +14,12 @@ joinfaces.primefaces.font-awesome=true
 #joinfaces.jsf.default-suffix=.xhtml
 
 #Bloque BD mysql azure
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://cfuentes.mysql.database.azure.com/scrumdb
-spring.datasource.username=cfuentes
-spring.datasource.password=159951c_
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://cfuentes.mysql.database.azure.com/scrumdb
+#spring.datasource.username=cfuentes
+#spring.datasource.password=159951c_
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #spring.datasource.url=jdbc:h2:~/db;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.url = jdbc:h2:file:D:/sample
@@ -35,3 +35,12 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 
 #spring.datasource.initialization-mode=always
+
+
+#Bloque BD mysql azure
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1/scrumdb
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
